--- a/webapp/front/front/src/app/features/auth/login-page/login-page.component.html
+++ b/webapp/front/front/src/app/features/auth/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 <div class="content-container">
   <div class="container f-c-c-c" style="z-index: 2">
     <landing-page-navbar></landing-page-navbar>
-    <div class="landing-neibo">neibo</div>
+    <div class="landing-neibo">Neibo</div>
     <p class="landing-description" style="mix-blend-mode: screen" i18n>
       A platform for gated communities that allows you to share news, book
       courts, and stay connected with your neighbors at all times.
