--- a/webapp/front/front/src/app/features/auth/signup-dialog/signup-dialog.component.html
+++ b/webapp/front/front/src/app/features/auth/signup-dialog/signup-dialog.component.html
@@ -25,8 +25,8 @@
       <div class="title mb-2">
         {{
           selectedOption === "neighbor"
-            ? "Welcome to neibo"
-            : "Boost your Business with neibo"
+            ? "Welcome to Neibo"
+            : "Boost your Business with Neibo"
         }}
       </div>
       <p>Sign up to get started.</p>
