--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
@@ -270,7 +270,7 @@
                 <app-paginator
                   [totalPages]="totalPages"
                   [currentPage]="page"
-                  [isMarketplace]="true"
+                  [theme]="'marketplace'"
                   (pageChange)="onPageChange($event)"
                 ></app-paginator>
               </div>
