--- a/webapp/front/front/src/app/features/service-providers/service-providers-join-neighborhoods-page/service-providers-join-neighborhoods-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-join-neighborhoods-page/service-providers-join-neighborhoods-page.component.html
@@ -62,6 +62,7 @@
           <app-paginator
             [totalPages]="totalAssociatedPages"
             [currentPage]="currentAssociatedPage"
+            [theme]="'services'"
             (pageChange)="onAssociatedPageChange($event)"
           ></app-paginator>
         </ng-template>
