--- a/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.html
+++ b/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.html
@@ -24,7 +24,7 @@
       y="0"
     ></use>
   </svg>
-  <div class="" style="height: 2em">
+  <div class="" style="height: 2em" [ngClass]="{ lila: isMarketplace }">
     <span
       class="h-100 container f-r-sb-c w-80 p-2"
       style="color: var(--background) font-size-12"
