--- a/webapp/front/front/src/app/features/feed/feed-post-preview/feed-post-preview.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-post-preview/feed-post-preview.component.html
@@ -69,13 +69,10 @@
           </div>
         </a>
         <div
-          class="mt-2 d-flex flex-row justify-content-start align-items-center flex-wrap"
+          class="mt-2 gap-1 d-flex flex-row justify-content-start align-items-center flex-wrap"
         >
           <ng-container *ngFor="let tag of tags">
-            <a
-              class="post-tag static m-l-3 m-r-3"
-              (click)="filterByTag(tag.self)"
-            >
+            <a class="post-tag static" (click)="filterByTag(tag.self)">
               {{ tag.name }}
             </a>
           </ng-container>
