--- a/webapp/front/front/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
@@ -38,7 +38,7 @@
         <app-paginator
           [totalPages]="totalPages"
           [currentPage]="page"
-          [isMarketplace]="true"
+          [theme]="'marketplace'"
           (pageChange)="onPageChange($event)"
         >
         </app-paginator>
