--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
@@ -95,8 +95,8 @@
                     >
                       <div class="f-c-c-c w-100 h-100">
                         <span>
-                          <i class="fa-regular fa-images"></i>
-                          <i class="fa fa-plus"></i>
+                          <i class="fa-regular fa-images me-1"></i>
+                          <i class="fa fa-plus ms-2"></i>
                         </span>
                         <h3 id="add-photo-text" class="font-weight-bold">
                           Add photo ({{ images.length }}/3)
