--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
@@ -155,7 +155,7 @@
         <app-paginator
           [totalPages]="totalPages"
           [currentPage]="page"
-          [isMarketplace]="true"
+          [theme]="'marketplace'"
           (pageChange)="onPageChange($event)"
         >
         </app-paginator>
