--- a/webapp/front/front/src/app/shared/components/navbar/navbar.component.html
+++ b/webapp/front/front/src/app/shared/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
               ></ellipse>
             </svg>
             <div class="f-c-s-s g-0 p-2">
-              <h3 class="c-background font-size-24">neibo</h3>
+              <h3 class="c-background font-size-24">Neibo</h3>
               <h5>{{ neighborhoodName }}</h5>
             </div>
           </div>
